--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,27 @@
+/* Content spacing improvements */
+.container {
+  padding: 0 20px;
+}
+
+.post-content {
+  line-height: 1.8;
+}
+
+.post-content p {
+  margin: 1.5em 0;
+}
+
+.post-content h1,
+.post-content h2,
+.post-content h3,
+.post-content h4,
+.post-content h5,
+.post-content h6 {
+  margin-top: 2em;
+  margin-bottom: 1em;
+}
+
+/* SNS Share buttons */
 .sns_parent {
   text-align: center;
 }
