fix: correct dark-mode

--- a/layouts/partials/post.html
+++ b/layouts/partials/post.html
@@ -60,3 +60,4 @@
 </div>
 
 <link rel="stylesheet" href="{{ "css/post-enhancements.css" | relURL }}">
+<link rel="stylesheet" href="{{ "css/dark-mode-fix.css" | relURL }}">
