feat: enable search in japanese

--- a/layouts/search/list.html
+++ b/layouts/search/list.html
@@ -106,5 +106,6 @@ body.dark .search-result em {
 </style>
 
 <script src="{{ "js/lunr.min.js" | relURL }}"></script>
+<script src="{{ "js/lunr-ja.js" | relURL }}"></script>
 <script src="{{ "js/search.js" | relURL }}"></script>
 {{ end }}
