--- a/layouts/search/list.html
+++ b/layouts/search/list.html
@@ -108,4 +108,5 @@ body.dark .search-result em {
 <script src="{{ "js/lunr.min.js" | relURL }}"></script>
 <script src="{{ "js/lunr-ja.js" | relURL }}"></script>
 <script src="{{ "js/search.js" | relURL }}"></script>
+<script src="{{ "js/image-lazy-load.js" | relURL }}"></script>
 {{ end }}
