--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -22,15 +22,23 @@
     <meta name="keywords" content='{{ delimit $keywords ", "}}'>
 
     <meta property="og:url" content="{{ .Permalink }}">
-    <meta property="og:type" content="website">
+    <meta property="og:type" content="{{ if .IsPage }}article{{ else }}website{{ end }}">
     <meta property="og:title" content="{{ $title }}">
     <meta property="og:description" content="{{ $description }}">
     <meta property="og:image" content="{{ absURL $image }}">
     <meta property="og:image:secure_url" content="{{ absURL $image }}">
+    {{ if .IsPage }}
+    <meta property="article:published_time" content="{{ .Date.Format "2006-01-02T15:04:05-07:00" }}">
+    <meta property="article:modified_time" content="{{ .Lastmod.Format "2006-01-02T15:04:05-07:00" }}">
+    <meta property="article:author" content="{{ .Site.Params.author | default "Unknown" }}">
+    {{ with .Params.tags }}{{ range . }}<meta property="article:tag" content="{{ . }}">{{ end }}{{ end }}
+    {{ end }}
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="{{ $title }}">
     <meta name="twitter:description" content="{{ $description }}">
+    {{ with .Site.Params.twitterUsername }}<meta name="twitter:site" content="@{{ . }}">{{ end }}
+    {{ with .Site.Params.twitterUsername }}<meta name="twitter:creator" content="@{{ . }}">{{ end }}
     <meta property="twitter:domain" content="{{ .Permalink }}">
     <meta property="twitter:url" content="{{ .Permalink }}">
     <meta name="twitter:image" content="{{ absURL $image }}">
@@ -49,6 +57,9 @@
 
     {{ $jsBundle := resources.Match "js/**.js" | resources.Concat "js/bundle.js" | minify | resources.Fingerprint "sha256" }}
     <script src="{{ $jsBundle.RelPermalink }}" integrity="{{ $jsBundle.Data.Integrity }}"></script>
+
+    <!-- Structured Data / JSON-LD -->
+    {{ partial "schema.html" . }}
 
     <!-- Option for user to inject custom html -->
     {{ if .Site.Params.CustomHeadHTML }}
